--- a/src/dominio/package.json
+++ b/src/dominio/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "cartelera",
+  "name": "dominio",
   "version": "1.0.0",
-  "description": "Ejemplo de modelo dominio Cartelera",
+  "description": "MisGastos dominio",
   "main": "index.js",
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage"
+    "test": "jest --coverage",
+    "testWindows": "node --experimental-vm-modules node_modules/jest/bin/jest --coverage"
   },
-  "author": "FIS",
-  "license": "",
-  "type": "module",
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.2.0",
+    "eslint-config-google": "^0.14.0",
     "jest": "^26.6.3"
   }
 }
