--- a/src/interfaz/package.json
+++ b/src/interfaz/package.json
@@ -1,31 +1,52 @@
 {
-  "name": "interfaz",
+  "name": "interface",
   "version": "1.0.0",
-  "description": "Ejemplo de interfaz web",
-  "main": "index.js",
+  "description": "Misgastos interface",
+  "private": true,
   "scripts": {
     "start": "webpack serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "FIS",
-  "license": "",
-  "dependencies": {
-    "@material/snackbar": "^12.0.0",
-    "material-components-web": "^11.0.0"
+    "watch": "webpack --watch",
+    "build": "cross-env NODE_ENV=production webpack",
+    "build-dev": "webpack",
+    "clean": "rm -rf ./dist"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.16",
-    "@babel/preset-env": "^7.13.15",
-    "autoprefixer": "^10.2.5",
-    "babel-loader": "^8.2.2",
-    "css-loader": "^5.2.4",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "autoprefixer": "^10.4.0",
+    "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.5.1",
     "extract-loader": "^5.1.0",
     "file-loader": "^6.2.0",
-    "postcss-loader": "^5.2.0",
-    "sass": "^1.32.11",
-    "sass-loader": "^11.0.1",
-    "webpack": "^5.36.0",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "html-loader": "^3.0.1",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.4.3",
+    "postcss-loader": "^6.2.0",
+    "sass": "^1.43.4",
+    "sass-loader": "^12.3.0",
+    "webpack": "^5.64.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^3.11.3"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@material/button": "^13.0.0",
+    "@material/checkbox": "^13.0.0",
+    "@material/drawer": "^13.0.0",
+    "@material/fab": "^13.0.0",
+    "@material/icon-button": "^13.0.0",
+    "@material/list": "^13.0.0",
+    "@material/ripple": "^13.0.0",
+    "@material/select": "^13.0.0",
+    "@material/tab-bar": "^13.0.0",
+    "@material/textfield": "^13.0.0",
+    "@material/top-app-bar": "^13.0.0",
+    "chart.js": "^3.6.0",
+    "cron": "^1.8.2",
+    "material-components-web": "^13.0.0"
   }
 }
