--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -9,6 +9,10 @@
         "ecmaVersion": 13,
         "sourceType": "module"
     },
+    //Para evitar LC CRLF
     "rules": {
-    }
+        "linebreak-style": 0,
+        "global-require": 0,
+        "eslint linebreak-style": [0, "error", "windows"]
+}
 }
