--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -11,8 +11,6 @@
     },
     //Para evitar LC CRLF
     "rules": {
-        "linebreak-style": 0,
-        "global-require": 0,
-        "eslint linebreak-style": [0, "error", "windows"]
-}
+        "linebreak-style": ["error", "windows"]
+    }
 }
